--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/custom.css" />
     <title>HTML CSS Test</title>
   </head>
@@ -37,18 +37,18 @@
         </header>
               
         <div class="container py-3">
-                  <h1>Home</h1>
-                  <p>This is a dummy text. We are going to repeat it all over again. This is a dummy text. We are going to repeat it all over again. This is a dummy text. We are going to repeat it all over again.This is a dummy text. We are going to repeat it all over again.
-                        This is a dummy text. We are going to repeat it all over again. This is a dummy text. We are going to repeat it all over again.This is a dummy text. We are going to repeat it all over again.
+            <h1>Home</h1>
+            <p>This is a dummy text. We are going to repeat it all over again. This is a dummy text. We are going to repeat it all over again. This is a dummy text. We are going to repeat it all over again.This is a dummy text. We are going to repeat it all over again.
+                  This is a dummy text. We are going to repeat it all over again. This is a dummy text. We are going to repeat it all over again.This is a dummy text. We are going to repeat it all over again.
 
-                  </p>
-              </div>
+            </p>
+        </div>
 
-              <footer class="footer">
-                    <div class="container">
-                      <span class="text-white">Made with  <span style="color: #e25555;">&hearts;</span> by MikeJesus</span>
-                    </div>
-                </footer>
+        <footer class="footer">
+            <div class="container">
+                <span class="text-white">Made with  <span style="color: #e25555;">&hearts;</span> by MikeJesus</span>
+            </div>
+        </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
